- Gestión de warnings en <EstadisticasService> y <CSVService> - Adición de renderizado por defecto en gráfico "EVOLUCION GASTO".